(doc): Memory Tuning : Spark